[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Animated.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UIElements/EndScreen.gd" type="Script" id=2]
[ext_resource path="res://UIElements/Resources/WindowStylebox.stylebox" type="StyleBox" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="EndScreen" type="Panel"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
margin_left = 1.8877
margin_right = 1.8877
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 635.068
margin_top = 69.7928
margin_right = 923.068
margin_bottom = 137.793
custom_fonts/font = SubResource( 1 )
text = "Level Passed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayLevelButton" type="Button" parent="."]
margin_left = 127.245
margin_top = 444.246
margin_right = 470.245
margin_bottom = 538.246
custom_fonts/font = SubResource( 2 )
text = "Replay Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="."]
margin_left = 620.268
margin_top = 446.149
margin_right = 963.268
margin_bottom = 540.149
custom_fonts/font = SubResource( 2 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenuButton" type="Button" parent="."]
margin_left = 1094.09
margin_top = 449.924
margin_right = 1437.09
margin_bottom = 543.924
custom_fonts/font = SubResource( 2 )
text = "Back to Menu"
__meta__ = {
"_edit_use_anchors_": false
}
